@@ -1,7 +1,7 @@
 package org.example.andensemesterproeve_thesemicolons.repository;
 
-import org.example.andensemesterproeve_thesemicolons.domain.Title_ENUM;
-import org.example.andensemesterproeve_thesemicolons.domain.User;
+import org.example.andensemesterproeve_thesemicolons.domain.*;
+import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Repository;
 
@@ -18,9 +18,22 @@ public class UserRepositoryMySql implements IUserRepository {
     }
 
     @Override
+    public int findIdByUsernameAndPassword(String username, String password) throws EmptyResultDataAccessException {
+        String sql = "SELECT * FROM users WHERE username = ? AND password = ?";
+
+        int userId = jdbcTemplate.queryForObject(sql, (rs, rowNum) ->
+                (rs.getInt("id")
+                ), username, password
+        );
+
+        return userId;
+        //TODO - fejllogning
+    }
+
+    @Override
     public Optional<User> findById(int id) {
         String sql = """
-                SELECT * FROM users WHERE id = ?
+                SELECT id, username, email, title FROM users WHERE id = ?
                 """;
 
         List<User> results = jdbcTemplate.query(sql, (rs, rowNum) ->
@@ -28,7 +41,7 @@ public class UserRepositoryMySql implements IUserRepository {
                         rs.getInt("id"),
                         rs.getString("username"),
                         rs.getString("email"),
-                        Title_ENUM.valueOf(rs.getString("user_role"))
+                        Title_ENUM.valueOf(rs.getString("title"))
                 ), id
         );
 
@@ -36,6 +49,56 @@ public class UserRepositoryMySql implements IUserRepository {
             return Optional.empty();
         }
 
-        return Optional.of(results.get(0));
+        results.getFirst().setCards(findAllCardsForUser(results.getFirst()));
+        results.getFirst().setDecks(findAllDecksForUser(results.getFirst()));
+
+        return Optional.of(results.getFirst());
+    }
+
+    @Override
+    public List<Card> findAllCardsForUser(User user) {
+        String sql = """
+                SELECT * FROM user_cards
+                JOIN cards ON cards.id = user_owned_cards.card
+                WHERE user_id = ?
+                """;
+
+        return jdbcTemplate.query(sql, (rs, rowNum) ->
+                new Card(
+                        rs.getInt("cards.id"),
+                        rs.getString("name"),
+                        Type_ENUM.valueOf(rs.getString("type")),
+                        rs.getString("set"),
+                        Rarity_ENUM.valueOf(rs.getString("rarity")),
+                        rs.getString("image_url"),
+                        rs.getString("reference_url"),
+                        rs.getBoolean("forSwapping"),
+                        rs.getBoolean("visible")
+                ), user.getId()
+        );
+    }
+
+    @Override
+    public List<Deck> findAllDecksForUser(User user) {
+        String sql = """
+                SELECT format, name FROM decks WHERE user_id = ?
+                """;
+
+        return jdbcTemplate.query(sql, (rs, rowNum) ->
+                        new Deck(
+                                rs.getInt("id"),
+                                rs.getString("name"),
+                                rs.getString("format")
+                        ), user.getId()
+        );
+    }
+
+    @Override
+    public List<Integer> findCardIdsForDeck(Deck deck) {
+        String sql = "SELECT * FROM deck_cards WHERE deck_id = ?";
+
+        return jdbcTemplate.query(sql, (rs, rowNum) ->
+                rs.getInt("user_owned_card_id"), deck.getId()
+        );
     }
 }
